Fix overflow in post pages

--- a/src/styles/components/_post-div.scss
+++ b/src/styles/components/_post-div.scss
@@ -1,10 +1,12 @@
+.overflow-post {
+  height: 793px;
+  overflow: auto;
+}
 .preview-post {
   padding: 1em;
   width: 100%;
-  height: 793px;
   background-color: var(--dark-color);
   border-radius: 5px;
-  overflow: auto;
   color: var(--light-text);
 
   p {
